--- a/templates/hill.html
+++ b/templates/hill.html
@@ -150,6 +150,7 @@
             <a href="/hill" class="active">Hill Cipher</a>
             <a href="/playfair">Playfair Cipher</a>
             <a href="/primality">Primality Testing</a>
+            <a href="/des">DES Cipher</a>
         </div>
         
         <div class="content">
