--- a/templates/index.html
+++ b/templates/index.html
@@ -140,6 +140,7 @@
             <a href="/hill">Hill Cipher</a>
             <a href="/playfair">Playfair Cipher</a>
             <a href="/primality">Primality Testing</a>
+            <a href="/des">DES Cipher</a>
         </div>
         
         <div class="content">
