--- a/templates/primality.html
+++ b/templates/primality.html
@@ -153,6 +153,7 @@
             <a href="/hill">Hill Cipher</a>
             <a href="/playfair">Playfair Cipher</a>
             <a href="/primality" class="active">Primality Testing</a>
+            <a href="/des">DES Cipher</a>
         </div>
         
         <div class="content">
