Add AES-128 cipher with intermediate steps

--- a/templates/des.html
+++ b/templates/des.html
@@ -149,6 +149,7 @@
             <a href="/playfair">Playfair Cipher</a>
             <a href="/primality">Primality Testing</a>
             <a href="/des" class="active">DES Cipher</a>
+            <a href="/aes">AES Cipher</a>
         </div>
         
         <div class="content">
