--- a/templates/index.html
+++ b/templates/index.html
@@ -141,6 +141,7 @@
             <a href="/playfair">Playfair Cipher</a>
             <a href="/primality">Primality Testing</a>
             <a href="/des">DES Cipher</a>
+            <a href="/aes">AES Cipher</a>
         </div>
         
         <div class="content">
