--- a/templates/primality.html
+++ b/templates/primality.html
@@ -154,6 +154,7 @@
             <a href="/playfair">Playfair Cipher</a>
             <a href="/primality" class="active">Primality Testing</a>
             <a href="/des">DES Cipher</a>
+            <a href="/aes">AES Cipher</a>
         </div>
         
         <div class="content">
