--- a/templates/hill.html
+++ b/templates/hill.html
@@ -151,6 +151,7 @@
             <a href="/playfair">Playfair Cipher</a>
             <a href="/primality">Primality Testing</a>
             <a href="/des">DES Cipher</a>
+            <a href="/aes">AES Cipher</a>
         </div>
         
         <div class="content">
